Fixed pic overlapping with navbar.

--- a/style.css
+++ b/style.css
@@ -114,7 +114,6 @@ footer a:active {
   height: 30%;
   width: 30%;
   margin-bottom: 20px;
-  opacity: 85%;
 }
 
 .skills-grid-item img {
